# openweather-aws-pipeline

./: .coverage  .env.example  .gitignore  README.md  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  cleanup-resources.yml  terraform-deploy.yml
config/: config.yaml
notebooks/: 01_data_exploration.ipynb
openweather_aws_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: re_partition_s3_objects.py  update_progress_queue_status.py
src/: APIManager.py  DynamoDBOperations.py  S3Operations.py  WeatherCollector_lambda_handler.py  WeatherDataCollector.py  WeatherHistGen_lambda_handler.py  config_manager.py  logger_config.py  process_historical_data.py
src/models/: collection_models.py
src/openweather_aws_pipeline.egg-info/: SOURCES.txt  top_level.txt
src/openweather_pipeline/: WeatherDataCollector.py  api_manager.py  config_manager.py  dynamodb_operations.py  process_historical_data.py  s3_operations.py  weather_collector_lambda_handler.py  weather_data_collector.py  weather_hist_gen_lambda_handler.py
src/openweather_pipeline/config/: config.yaml
src/openweather_pipeline/models/: collection_models.py
terraform/: main.tf
tests/: test_api_manager.py
