[build-system]
requires = ["setuptools>=65.5"]
build-backend = "setuptools.build_meta"

[project]
name = "openweather-aws-pipeline"
version = "0.1.0"
description = "AWS ML pipeline to predict weather for select zipcodes"
readme = "README.md"
requires-python = ">3.11"
dependencies= [
    "boto3>=1.40.0",
    "python-dotenv>=1.2.0",
    "PyYAML>=6.0.0",
    "requests>=2.32.0",
    "pandas>=2.2.0",
    "pydantic>=2.12.5"
]

[tool.setuptools.packages.find]
where = ["."]
include = [ "src*" ]

[tool.black]
line-length = 100