[build-system]
requires = ["setuptools>=65.5"]
build-backend = "setuptools.build_meta"

[project]
name = "openweather-aws-pipeline"
version = "0.1.0"
description = "AWS ML pipeline to predict weather for select zipcodes"
readme = "README.md"
requires-python = ">3.11"
dependencies= [
    "boto3>=1.40.0",
    "python-dotenv>=1.2.0",
    "PyYAML>=6.0.0",
    "requests>=2.32.0",
    "pydantic>=2.12.5"
]

[project.optional-dependencies]
dev = [
    "pandas>=2.2.0",
    "pydantic>=2.12.0",
    "jupyter>=1.1.0",
    "jupyterlab>=4.5.0",
    "notebook>=7.5.0",
    "ipykernel>=7.0.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.12.0",
    "scikit-learn>=1.7.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = [ "openweather_pipeline*" ]

[tool.black]
line-length = 100